dsp/haskelldsp/Numeric/Special/Bessel_stub_ffi.h


extern double prim_bessel_zero_J1(int s);

extern void* prim_bessel_zero_J1_e(int s);

extern double access_prim_bessel_zero_J1_e_val(HsPtr);

extern double access_prim_bessel_zero_J1_e_err(HsPtr);

extern int access_prim_bessel_zero_J1_e_gc_failed(HsPtr);

extern void* access_prim_bessel_zero_J1_e_gc_failstring(HsPtr);

extern double prim_bessel_zero_Jnu(double nu,int s);

extern void* prim_bessel_zero_Jnu_e(double nu,int s);

extern double access_prim_bessel_zero_Jnu_e_val(HsPtr);

extern double access_prim_bessel_zero_Jnu_e_err(HsPtr);

extern int access_prim_bessel_zero_Jnu_e_gc_failed(HsPtr);

extern void* access_prim_bessel_zero_Jnu_e_gc_failstring(HsPtr);