dsp/haskelldsp/Numeric/Special/Bessel.hs


bessel_zero_J1 :: Int -> Double
bessel_zero_J1 s =
  unsafePerformIO(
    prim_bessel_zero_J1 s
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_zero_J1" prim_bessel_zero_J1 :: Int -> IO (Double)

bessel_zero_J1_e :: Int -> (Double,Double)
bessel_zero_J1_e s =
  unsafePerformIO(
    prim_bessel_zero_J1_e s
    >>= \ gc_result ->
    access_prim_bessel_zero_J1_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_zero_J1_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_zero_J1_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_zero_J1_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_zero_J1_e" prim_bessel_zero_J1_e :: Int -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_J1_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_J1_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_J1_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_J1_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_zero_Jnu :: Double -> Int -> Double
bessel_zero_Jnu nu s =
  unsafePerformIO(
    prim_bessel_zero_Jnu nu s
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_zero_Jnu" prim_bessel_zero_Jnu :: Double -> Int -> IO (Double)

bessel_zero_Jnu_e :: Double -> Int -> (Double,Double)
bessel_zero_Jnu_e nu s =
  unsafePerformIO(
    prim_bessel_zero_Jnu_e nu s
    >>= \ gc_result ->
    access_prim_bessel_zero_Jnu_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_zero_Jnu_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_zero_Jnu_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_zero_Jnu_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_zero_Jnu_e" prim_bessel_zero_Jnu_e :: Double -> Int -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_Jnu_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_Jnu_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_Jnu_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_Jnu_e_gc_failstring :: Addr -> IO (Addr)
